<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Marrow Reconstruction</string>
    <string name="tab_home">Home</string>
    <string name="tab_qbank">QBank</string>
    <string name="tab_tests">Tests</string>
    <string name="tab_video">Videos</string>
    <string name="label_magic_module_new_module">New Magic Module</string>
    <string name="label_home_share">Share Marrow</string>
    <string name="source_menu_icon_png_base64">iVBORw0KGgoAAAANSUhEUgAAABUAAAAPCAQAAAChU0zgAAAAkUlEQVQoz2P8z8zQyPCE4T8DfvCdYSnD/7b/f/4TBr//dzP+V2U4xvCFgRBQYFBlYGD4z8gwgIDxvwDDHoYzOGR/M5QzfoPz/i/AEwJ//i9BNlWMYT3DLxymWjJoMD5A4tMmBP5zofG5cYWADcNehuMoYhwMAYwvsJm5CiME/vxfj81UFoZEhi8MP9H8XY5NKQAnmXmBG8EH2wAAAABJRU5ErkJggg==</string>
    <string name="text_subjects">Subjects</string>
    <string name="sort_by_v2">Sort by</string>
    <string name="report_video_piracy">Report Video Piracy</string>
    <string name="intern_mode_v2_header">Intern Mode 2.0 with PYTs!</string>
    <string name="new_text">new</string>
    <string name="pyt_desc">Intern Mode marks the videos that contain Previous Years’ Topics (PYTs) from NEET PG and INI-CET exams.</string>
    <string name="pyt_turn_on">Turn On</string>
    <string name="nav_learn_more">Learn More</string>
    <string name="text_watch_next">Watch Next</string>
</resources>
